--- a/Makefile.config
+++ b/Makefile.config
@@ -22,7 +22,8 @@ UNAME := $(shell uname)
 ifeq ($(UNAME), Linux)
   # Linux flags
   CC = g++
-  CXXFLAGS += -std=c++98 -Wall
+  #CXXFLAGS += -std=c++98 -Wall
+  CXXFLAGS += -std=c++0x -Wall
   CXXFLAGS += -O3 -DNDEBUG
   # turn on for crash debugging, get symbols with <prog> 2>&1 | c++filt
   #CXXFLAGS += -g -rdynamic
